--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-menu></app-menu>
-
+<div class="external_container">
+  <app-menu></app-menu>
+</div>
