Adding "make order"

--- a/src/main/frontend/src/app/menu/menu.component.html
+++ b/src/main/frontend/src/app/menu/menu.component.html
@@ -14,7 +14,7 @@
         </small>
       </div>
       <div class="col-sm-2 inline">
-        <button type="button" class="btn btn-primary">Order</button>
+        <a routerLink="/order/{{dish.id}}" class="btn btn-primary">Order</a>
       </div>
     </div>
   </div>
