--- a/src/main/frontend/src/app/menu/menu.component.html
+++ b/src/main/frontend/src/app/menu/menu.component.html
@@ -1,21 +1,7 @@
 <div class="list-group" class="list">
   <div class="container" style="">
-    <div *ngFor="let dish of dishes" class="list-group-item align-items-start row" style="display: flex">
-      <div class="col-sm-10 inline">
-        <div class="d-flex w-100 justify-content-between">
-          <div>
-              <h5 class="mb-1">{{dish.name}}</h5>
-          </div>
-          <span class="badge badge-pill badge-secondary price">{{dish.price}} $</span>
-        </div>
-        <p class="mb-1">{{dish.description}}</p>
-        <small>Waiting time:
-          <span class="badge-secondary badge-pill"> {{dish.estimatedPreparationTime}} min</span>
-        </small>
-      </div>
-      <div class="col-sm-2 inline">
-        <a routerLink="/order/{{dish.id}}" class="btn btn-primary">Order</a>
-      </div>
+    <div *ngFor="let dish of dishes">
+      <app-dish [dish]="dish" [orderButton]="true"></app-dish>
     </div>
   </div>
 </div>
