--- a/src/main/frontend/src/app/dish/dish.component.html
+++ b/src/main/frontend/src/app/dish/dish.component.html
@@ -1,3 +1,17 @@
-<p>
-  dish works!
-</p>
+<div class="list-group-item align-items-start row" style="display: flex">
+  <div class="col-sm-10">
+    <div class="d-flex w-100 justify-content-between">
+      <div>
+        <h5 class="mb-1">{{dish.name}}</h5>
+      </div>
+      <span class="badge badge-pill badge-secondary price">{{dish.price}} $</span>
+    </div>
+    <p class="mb-1">{{dish.description}}</p>
+    <small>Waiting time:
+      <span class="badge-secondary badge-pill"> {{dish.estimatedPreparationTime}} min</span>
+    </small>
+  </div>
+  <div *ngIf="orderButton" class="col-sm-2">
+    <a routerLink="/order/{{dish.id}}" class="btn btn-primary">Order</a>
+  </div>
+</div>
