Make order (call webservice) and redirect

--- a/src/main/frontend/src/app/order-dish/order-dish.component.html
+++ b/src/main/frontend/src/app/order-dish/order-dish.component.html
@@ -1,6 +1,8 @@
+<button (click)="goBack()">go back</button>
+
 Check your order, and choose your seat<br/>
 
-<app-dish [dish]="dish" [orderButton]="false"></app-dish>
+<app-dish *ngIf="dish != null" [dish]="dish" [orderButton]="false"></app-dish>
 
 
 
