--- a/src/main/frontend/src/app/orders/orders.component.html
+++ b/src/main/frontend/src/app/orders/orders.component.html
@@ -4,7 +4,7 @@ Your orders:
   <div class="container" style="">
     <div *ngFor="let order of orders">
       <div class="list-group-item align-items-start row" style="display: flex">
-        {{order.timeStamp}}<br/>
+        {{getMinutes(order.timeStamp)}} {{getDate(order.timeStamp)}}<br/>
         {{order.dish.name}}<br/>
         {{order.state}}<br/>
         {{order.seat}}<br/>
