--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="external_container">
+  <app-alert></app-alert>
   <router-outlet></router-outlet>
 </div>
