--- a/src/main/frontend/src/app/alert/alert.component.html
+++ b/src/main/frontend/src/app/alert/alert.component.html
@@ -1,5 +1,6 @@
-<div *ngFor = "let alert of alerts" [ngClass]="{'alert-success' : isSuccess(alert)}" class="alert alert-dismissible fade show custom-alert" role="alert">
-  <button (click)="removeAlert(alert)"type="button" class="close" data-dismiss="alert" aria-label="Close">
+<div *ngFor="let alert of alerts" [ngClass]="{'alert-success' : isSuccess(alert)}"
+     class="alert alert-dismissible fade show custom-alert" role="alert">
+  <button (click)="removeAlert(alert)" type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
   {{alert.message}}
